Rename R6S to R6S/R6C and update info

--- a/index.html
+++ b/index.html
@@ -1117,9 +1117,9 @@
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div><span>CPU:</span>Rockchip RK3568 2.0 GHz | 4 cores | ARMv8</div>
-								<div><span>RAM:</span>2 GiB LPDDR4X</div>
-								<div><span>NET:</span>2x 2.5 Gbit + 1x 1 Gbit Ethernet</div>
-								<div><span>Storage:</span>8 GiB eMMC</div>
+								<div><span>RAM:</span>2-4 GiB LPDDR4X</div>
+								<div><span>NET:</span>2x/1x 2.5 Gbit + 1x 1 Gbit Ethernet</div>
+								<div><span>Storage:</span>8-32 GiB eMMC (optional on R5C)</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiR5S-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
@@ -1129,17 +1129,17 @@
 						<div class="col-md-6"><img src="images/sbc_images/nanopir5s.jpg" alt="NanoPi R5S photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
-				<!-- NanoPi R6S -->
+				<!-- NanoPi R6S/R6C -->
 				<div id="nanopir6s" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi R6S</h3><span class="close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi R6S/R6C</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
-								<div><span>RAM:</span>8 GiB LPDDR4</div>
+								<div><span>RAM:</span>4-8 GiB LPDDR4</div>
 								<div><span>USB:</span>USB 3.0 + USB 2.0</div>
-								<div><span>NET:</span>2x 2.5 Gbit + 1x 1 Gbit Ethernet</div>
-								<div><span>Storage:</span>32 GiB eMMC</div>
+								<div><span>NET:</span>2x/1x 2.5 Gbit + 1x 1 Gbit Ethernet</div>
+								<div><span>Storage:</span>32 GiB eMMC (optional on R6C)</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiR6S-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
@@ -1511,7 +1511,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
 						<a href="#downloadinfo" class="thumbnail" rel="#nanopir6s">
 							<img src="images/sbc_images/nanopir6s.jpg" alt="NanoPi R6S photo" width="8" height="5" loading="lazy">
-							<h3>NanoPi R6S</h3>
+							<h3>NanoPi R6S/R6C</h3>
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
