--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.16 has been released</h2>
+					<h2>DietPi v8.17 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>microblog.pub added to software catalogue, reworked display brightness and x86 GPU driver menus for better control and Vulkan support, kernel upgrade for NanoPi R5S/R6S and Quartz64, aligned service startup with systemd</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_16/" target="_blank" rel="noopener">Release notes</a>
+					<p>NanoPi R6C support verified. openHAB home automation software, Moonlight game streaming client and Restic backup tool added to software catalogue. A lot of smaller bug fixes and enhancements done:</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_17/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
