--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.18 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>Linux 6.3, LVM and RAID support for Quartz64, Pi-hole support for RISC-V, lots of fixes for Debian Bookworm, preparing for its release on 2023-06-10.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_18/" target="_blank" rel="noopener">Release notes</a>
+					<h2>Debian Bookworm has been released</h2>
+					<h4>All info about the new Debian release</h4>
+					<p>Debian Bookworm has been released on 2023-06-10. Most image downloads have been rebased onto Bookworm, but we still provide Bullseye images as well. Find all relevant info in our article:</p>
+					<a class="da-link" href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
