--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v8.19 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>NanoPC T6 and ROCK 5A support added/verified, MediaWiki added to our software catalogue, initial Debian Trixie support added, Home Assistant update and fixes for its latest version</p>
+					<p>NanoPC T6 support added/verified, MediaWiki added to our software catalogue, initial Debian Trixie support added, Home Assistant update and fixes for its latest version</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v8_19/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
@@ -1427,9 +1427,9 @@
 						<div class="col-md-6"><img src="images/sbc_images/rock3a.jpg" alt="ROCK 3A photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
-				<!-- ROCK 5 -->
+				<!-- ROCK 5B -->
 				<div id="rock5b" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>ROCK 5</h3><span class="close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>ROCK 5B</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
@@ -1446,7 +1446,7 @@
 									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
 								</div>
 							</div>
-							<p>ROCK 5A/5B are Radxa's new flagship SBCs, featuring the new Rockchip RK3588 SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi.</p>
+							<p>Radxa's new flagship SBC, featuring the new Rockchip RK3588 SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/rock5b.jpg" alt="ROCK 5B photo" width="8" height="5" loading="lazy"></div>
 					</div>
@@ -1646,7 +1646,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
 						<a href="#downloadinfo" class="thumbnail" rel="#rock5b">
 							<img src="images/sbc_images/rock5b.jpg" alt="ROCK 5B photo" width="8" height="5" loading="lazy">
-							<h3>ROCK 5</h3>
+							<h3>ROCK 5B</h3>
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
