--- a/index.html
+++ b/index.html
@@ -232,19 +232,19 @@
 								<div><span>CPU:</span>BCM2708 900/1000 MHz | 1 Core | ARMv6</div>
 								<div><span>RAM:</span>256 MiB - 512 MiB LPDDR2</div>
 								<br>
-								<div><a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bookworm.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye_Amiberry.7z"><span>Amiberry image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bookworm_Amiberry.7z"><span>Amiberry image:</span><i class="fa fa-download"></i><u>Download</u></a>
 									<br>This image installs and boots into <a href="https://dietpi.com/docs/software/gaming/#amiberry" target="_blank" rel="noopener" style="text-decoration-line:underline;">Amiberry</a> automatically on first boot.
 								</div>
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye_AlloGUI.7z"><span>Allo GUI image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bookworm_AlloGUI.7z"><span>Allo GUI image:</span><i class="fa fa-download"></i><u>Download</u></a>
 									<br>This image has our <a href="https://dietpi.com/forum/t/dietpi-allo-com-web-gui-image/1523" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
 								</div>
 								<div>
-									<span>Bookworm images:</span>
-									<br>We provide images based on the new Debian Bookworm release as well, but those are currently not able to run PHP. All info about this, and how to install the new images regardless, can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
+									<span>Bullseye images:</span>
+									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
 								</div>
 							</div>
 							<p>These images are compatible with all Raspberry Pi models, but we recommend it only for Raspberry Pi 1 and Zero (1) models.</p>
