Update release slider

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.19 has been released</h2>
+					<h2>DietPi v8.20 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>NanoPC T6 support added/verified, MediaWiki added to our software catalogue, initial Debian Trixie support added, Home Assistant update and fixes for its latest version</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_19/" target="_blank" rel="noopener">Release notes</a>
+					<p>Homebridge HomeKit API platform added; NFS server support for Quartz64; kernel updates for NanoPi 5/6 series and VisionFive 2; cipher suite and security header updates for some webserver/software combinations</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_20/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
