Add v8.22 release slide

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.21 has been released</h2>
+					<h2>DietPi v8.22 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>Added support for Orange Pi 5 Plus; Major kernel upgrade for Orange Pi 5, ROCK 5B and all RK33xx SBCs; 802.11ac/WiFi 5, 802.11ax/WiFi 6 and 5 GHz support for WiFi hotspot</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_21/" target="_blank" rel="noopener">Release notes</a>
+					<p>Added ADS-B Feeder and Kavita reading server to software catalogue; DietPi images are now xz-compressed, provided with dedicated hash and signature and all have a FAT setup partition for easier setup automation.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_22/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
