Add ROCK 5A and ASUS Tinker Board 2 to download page

--- a/index.html
+++ b/index.html
@@ -746,6 +746,28 @@
 						<div class="col-md-6"><img src="images/sbc_images/asustinkerboard.jpg" alt="ASUS Tinker Board photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<div id="asustinkerboard2" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>ASUS Tinker Board 2</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>RAM:</span>2 GiB LPDDR4</div>
+								<div><span>NET:</span>Gbit Ethernet, WiFi 5, Bluetooth 5.0</div>
+								<div><span>Storage:</span>eMMC socket (model S only)</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_ASUSTB2-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_ASUSTB2-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_ASUSTB2-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div>
+									<span>Bullseye images:</span>
+									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
+								</div>
+							</div>
+							<p>Successor of the ASUS Tinker Board 1 with 64-bit RK3399 SoC.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/asustinkerboard2.jpg" alt="ASUS Tinker Board 2 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<div id="nanopifire3" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi Fire3</h3><span class="close"></span></div></div>
 					<div class="row">
@@ -1427,6 +1449,30 @@
 						<div class="col-md-6"><img src="images/sbc_images/rock3a.jpg" alt="ROCK 3A photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<!-- ROCK 5A -->
+				<div id="rock5a" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>ROCK 5A</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
+								<div><span>USB:</span>USB 3.0 OTG and HOST</div>
+								<div><span>NET:</span>2.5 Gbit Ethernet, optional Radxa Wireless Module</div>
+								<div><span>Storage:</span>microSD and eMMC sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_ROCK5A-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_ROCK5A-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_ROCK5A-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div>
+									<span>Bullseye images:</span>
+									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
+								</div>
+							</div>
+							<p>Radxa's new flagship SBC, featuring the new Rockchip RK3588S SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/rock5a.jpg" alt="ROCK 5A photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<!-- ROCK 5B -->
 				<div id="rock5b" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>ROCK 5B</h3><span class="close"></span></div></div>
@@ -1674,6 +1720,13 @@
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
+						<a href="#downloadinfo" class="thumbnail" rel="#rock5a">
+							<img src="images/sbc_images/rock5a.jpg" alt="ROCK 5A photo" width="8" height="5" loading="lazy">
+							<h3>ROCK 5A</h3>
+							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
 						<a href="#downloadinfo" class="thumbnail" rel="#orangepi5">
 							<img src="images/sbc_images/orange-pi-5.jpg" alt="Orange Pi 5 photo" width="8" height="5" loading="lazy">
@@ -1700,6 +1753,13 @@
 							<img src="images/sbc_images/asustinkerboard.jpg" alt="ASUS Tinker Board photo" width="8" height="5" loading="lazy">
 							<h3>ASUS Tinker Board</h3>
 							<p>RK3288 1.8GHz | 4 cores | ARMv7</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix asus">
+						<a href="#downloadinfo" class="thumbnail" rel="#asustinkerboard2">
+							<img src="images/sbc_images/asustinkerboard2.jpg" alt="ASUS Tinker Board 2 photo" width="8" height="5" loading="lazy">
+							<h3>ASUS Tinker Board 2</h3>
+							<p>RK3399 1.8GHz | 6 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
