--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -52,7 +52,7 @@
 					<a class="nav-link" href="/#download">DOWNLOAD</a>
 					<a class="nav-link" href="/#gettingstarted">GETTING STARTED</a>
 					<a class="nav-link" href="stats.html">STATS</a>
-					<a class="nav-link" href="contribute.html">CONTRIBUTE</a>
+					<a class="nav-link" href="donate.html">DONATE</a>
 					<a class="nav-link" href="/#testimonials">TESTIMONIALS</a>
 				</div>
 			</div>
