microblog.pub and openHAB added to dietpi-software page (#298)

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -2525,6 +2525,38 @@
 						</div>
 					</div>
 				</div>
+				<!-- Start details for portfolio project 206 openHAB-->
+				<div id="openhab" class="row single-project">
+					<div class="col-md-4"><a href="https://dietpi.com/docs/assets/images/dietpi-software-homeautomation-openhab.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/openhab-screenshot-small.jpg" alt="openHAB Screenshot" loading="lazy"></a></div>
+					<div class="col-md-8">
+						<div class="project-description">
+							<div class="project-title clearfix">
+								<h3>openHAB</h3>
+								<span class="close"></span>
+							</div>
+							<div class="project-info">
+								<div><a href="https://dietpi.com/docs/software/home_automation/#openhab" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>openHAB (open Home Automation Bus) is an open source home automation platform. The keywords are Bindings, Things, Channels, Items, Rules, Pages.</p>
+						</div>
+					</div>
+				</div>
+				<!-- Start details for portfolio project 16 microblog.pub-->
+				<div id="microblogpub" class="row single-project">
+					<div class="col-md-4"><a href="https://dietpi.com/docs/assets/images/dietpi-software-social-microblogpub1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/microblogpub-screenshot-small.jpg" alt="microblog.pub Screenshot" loading="lazy"></a></div>
+					<div class="col-md-8">
+						<div class="project-description">
+							<div class="project-title clearfix">
+								<h3>microblog.pub</h3>
+								<span class="close"></span>
+							</div>
+							<div class="project-info">
+								<div><a href="https://dietpi.com/docs/software/social/#microblogpub" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>A self-hosted, single-user, ActivityPub powered microblog.</p>
+						</div>
+					</div>
+				</div>
 				<!-- Start details for portfolio project 149  tasmo admin-->
 				<div id="tasmo-admin" class="row single-project">
 					<div class="col-md-4"><a href="images/dietpi-software/tasmoadmin-screenshot-large.png" target="_blank" rel="noopener"><img src="images/dietpi-software/tasmoadmin-screenshot-small.png" alt="TasmoAdmin Screenshot" loading="lazy"></a></div>
@@ -3724,6 +3756,13 @@
 							<p>Matrix protocol server</p>
 						</a>
 					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Social">
+						<a href="#softwareinfo" class="thumbnail" rel="#microblogpub">
+							<img src="images/dietpi-software/microblogpub-logo.png" alt="microblog.pub Logo" width="8" height="5" loading="lazy">
+							<h3>microblog.pub</h3>
+							<p>ActivityPub powered microblog</p>
+						</a>
+					</div>
 					<!-- Networking -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix WiFi">
 						<a href="#softwareinfo" class="thumbnail" rel="#haproxy">
@@ -3773,6 +3812,13 @@
 							<img src="images/dietpi-software/domoticz-logo.png" alt="Domoticz Logo" width="8" height="5" loading="lazy">
 							<h3>Domoticz</h3>
 							<p>Home Automation System.</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Automation">
+						<a href="#softwareinfo" class="thumbnail" rel="#openhab">
+							<img src="images/dietpi-software/openhab-logo.svg" alt="openHAB Logo" width="8" height="5" loading="lazy">
+							<h3>openHAB</h3>
+							<p>open Home Automation Bus</p>
 						</a>
 					</div>
 					<!-- Hardware Projects-->
