Back to contribute.html

--- a/contribute.html
+++ b/contribute.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link rel="canonical" href="https://dietpi.com/donate.html">
+		<link rel="canonical" href="https://dietpi.com/contribute.html">
 		<title>Contribute to DietPi</title>
 		<meta name="description" content="Optimised | Simplified | For everyone - There are many ways you could support DietPi, with a contribution of any size !">
 		<!-- Twitter meta tags: https://developer.twitter.com/docs/twitter-for-websites/cards -->
@@ -17,7 +17,7 @@
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:site_name" content="DietPi-Software">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://dietpi.com/donate.html">
+		<meta property="og:url" content="https://dietpi.com/contribute.html">
 		<meta property="og:title" content="DietPi - Lightweight justice for your SBC!">
 		<meta property="og:description" content="Optimised | Simplified | For everyone - There are many ways you could support DietPi, with a contribution of any size !">
 		<meta property="og:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
@@ -52,7 +52,7 @@
 					<a class="nav-link" href="/#download">DOWNLOAD</a>
 					<a class="nav-link" href="/#gettingstarted">GETTING STARTED</a>
 					<a class="nav-link" href="stats.html">STATS</a>
-					<a class="nav-link" href="#donate">DONATE</a>
+					<a class="nav-link" href="#contribute">DONATE</a>
 					<a class="nav-link" href="/#testimonials">TESTIMONIALS</a>
 				</div>
 			</div>
