--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<a class="nav-link" href="#download">DOWNLOAD</a>
 					<a class="nav-link" href="#gettingstarted">GETTING STARTED</a>
 					<a class="nav-link" href="stats.html">STATS</a>
-					<a class="nav-link" href="donate.html">DONATE</a>
+					<a class="nav-link" href="contribute.html">DONATE</a>
 					<a class="nav-link" href="#testimonials">TESTIMONIALS</a>
 				</div>
 			</div>
@@ -2050,7 +2050,7 @@
 			<div class="container-xl centered">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<p class="large-text">Support DietPi with a donation of any size! Big or small, is so valuable for the project future!</p>
-				<a href="donate.html" class="button">Donate</a>
+				<a href="contribute.html" class="button">Donate</a>
 			</div>
 		</div>
 		<!-- Feedback section -->
