--- a/stats.html
+++ b/stats.html
@@ -17,7 +17,7 @@
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:site_name" content="DietPi-Stats">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://dietpi.com/donate.html">
+		<meta property="og:url" content="https://dietpi.com/contribute.html">
 		<meta property="og:title" content="DietPi OS stats & comparison">
 		<meta property="og:description" content="See resource usage and performance stats of DietPi images, and compare those against other Debian-based distributions">
 		<meta property="og:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
@@ -52,7 +52,7 @@
 					<a class="nav-link" href="/#download">DOWNLOAD</a>
 					<a class="nav-link" href="/#gettingstarted">GETTING STARTED</a>
 					<a class="nav-link" href="#stats">STATS</a>
-					<a class="nav-link" href="donate.html">DONATE</a>
+					<a class="nav-link" href="contribute.html">DONATE</a>
 					<a class="nav-link" href="/#testimonials">TESTIMONIALS</a>
 				</div>
 			</div>
