--- a/contribute.html
+++ b/contribute.html
@@ -89,9 +89,13 @@
 								</div>
 							</div>
 						</a>
-						<a href="https://www.patreon.com/DietPi" class="button" target="_blank" rel="noopener">
+						<a href="https://www.patreon.com/DietPi" class="button" target="_blank" rel="noopener" style="min-width: 152px;">
+							<div style="display: flex;flex-direction: column;justify-content: center; height: 100%; margin-left: 0.5rem; margin-right: 0.5rem;">
+								<div style="display: flex;flex-wrap: wrap;justify-content: center;">
 							<img src="images/contribute/patreon.svg" alt="Patreon Logo" width="32" height="32" loading="lazy">
 							Become a Patron
+								</div>
+							</div>
 						</a>
 					</div>
 				</div>
