--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -2376,7 +2376,7 @@
 				</div>
 				<!-- Start details for portfolio project java-->
 				<div id="java" class="row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/java-logo.png" target="_blank" rel="noopener"><img src="images/dietpi-software/java-logo.png" alt="Java logo" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/java-logo.svg" target="_blank" rel="noopener"><img src="images/dietpi-software/java-logo.svg" alt="Java logo" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -2398,7 +2398,7 @@
 				</div>
 				<!-- Start details for portfolio project 150 mono-->
 				<div id="mono" class="row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/mono-logo.png" target="_blank" rel="noopener"><img src="images/dietpi-software/mono-logo.png" alt="Mono logo" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/mono-logo.svg" target="_blank" rel="noopener"><img src="images/dietpi-software/mono-logo.svg" alt="Mono logo" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -2416,7 +2416,7 @@
 				</div>
 				<!-- Start details for portfolio project 17 git-->
 				<div id="git" class="row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/git-logo.png" target="_blank" rel="noopener"><img src="images/dietpi-software/git-logo.png" alt="Git logo" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/git-logo.svg" target="_blank" rel="noopener"><img src="images/dietpi-software/git-logo.svg" alt="Git logo" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -3128,21 +3128,21 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Development">
 						<a href="#softwareinfo" class="thumbnail" rel="#java">
-							<img src="images/dietpi-software/java-logo.png" alt="Java logo" width="8" height="5" loading="lazy">
+							<img src="images/dietpi-software/java-logo.svg" alt="Java logo" width="8" height="5" loading="lazy">
 							<h3>Java</h3>
 							<p>Java Runtime Environment JRE and Java Development Kit JDK</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Development">
 						<a href="#softwareinfo" class="thumbnail" rel="#git">
-							<img src="images/dietpi-software/git-logo.png" alt="Git logo" width="8" height="5" loading="lazy">
+							<img src="images/dietpi-software/git-logo.svg" alt="Git logo" width="8" height="5" loading="lazy">
 							<h3>Git</h3>
 							<p>Version control system</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Development">
 						<a href="#softwareinfo" class="thumbnail" rel="#mono">
-							<img src="images/dietpi-software/mono-logo.png" alt="Mono logo" width="8" height="5" loading="lazy">
+							<img src="images/dietpi-software/mono-logo.svg" alt="Mono logo" width="8" height="5" loading="lazy">
 							<h3>Mono</h3>
 							<p>Open source implementation of Microsoft's .NET Framework</p>
 						</a>
