Add DietPi v8.25 release slide

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.24 has been released</h2>
+					<h2>DietPi v8.25 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>Added support for Orange Pi Zero 3, ROCK 5A and ASUS Tinker Board 2; Enhancements for ROCK 3A and Quartz64; Bug fixes for several dietpi-software options</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_24/" target="_blank" rel="noopener">Release notes</a>
+					<p>Added support for Orange Pi 3B, PINE64 STAR64 (RISC-V based); Enhancements for Raspberry Pi and Quartz64; Bug fixes for several dietpi-software options</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_25/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
