--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v8.25 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>Added support for Orange Pi 3B, PINE64 STAR64 (RISC-V based); Enhancements for Raspberry Pi and Quartz64; Bug fixes for several dietpi-software options</p>
+					<p>Initial support for Raspberry Pi 5, PINE64 Star64 (RISC-V based) and Orange Pi 3B; Major kernel upgrade to Linux 6.6.7 for Quartz64 with move to mainline U-Boot 2023.10</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v8_25/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
