Add v9.0 release slide

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.25 has been released</h2>
+					<h2>DietPi v9.0 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>Initial support for Raspberry Pi 5, PINE64 Star64 (RISC-V based) and Orange Pi 3B; Major kernel upgrade to Linux 6.6.7 for Quartz64 with move to mainline U-Boot 2023.10</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_25/" target="_blank" rel="noopener">Release notes</a>
+					<p>Support for Debian Buster has been removed. DietPi systems with underlying Debian Buster will be migrated to a separate v8.25-based branch, which won't receive further feature updates.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_0/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
