--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v9.0 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>Support for Debian Buster has been removed. DietPi systems with underlying Debian Buster will be migrated to a separate v8.25-based branch, which won't receive further feature updates.</p>
+					<p>Support for Debian Buster has been removed. DietPi systems with underlying Debian Buster will be migrated to a separate v8.25-based branch, which won't receive further feature updates, but an info about how to upgrade to Bullseye.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v9_0/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
