--- a/contribute.html
+++ b/contribute.html
@@ -206,9 +206,7 @@
 								Please add your request and ideas using this <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub form</a>*.
 								<br><i>* To be able to do it you would need to be logged in with your GitHub account.</i>
 							</p>
-                            <p>
-                                To get an overview how to add a new software title, see <a href="https://github.com/MichaIng/DietPi/wiki/How-to-add-a-new-software-title" target="_blank" rel="noopener">How to add a new software title</a>.
-                            </p>
+							<p>To get an overview how to add a new software title, see <a href="https://github.com/MichaIng/DietPi/wiki/How-to-add-a-new-software-title" target="_blank" rel="noopener">How to add a new software title</a>.</p>
 						</div>
 						<div class="col-md-6"><img src="images/contribute/new-features.jpg" alt="Suggest" width="8" height="5" loading="lazy"></div>
 					</div>
