Extend some text to the contribution options (#311)

--- a/contribute.html
+++ b/contribute.html
@@ -206,6 +206,7 @@
 								Please add your request and ideas using this <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub form</a>*.
 								<br><i>* To be able to do it you would need to be logged in with your GitHub account.</i>
 							</p>
+							<p>To get an overview how to add a new software title, see <a href="https://github.com/MichaIng/DietPi/wiki/How-to-add-a-new-software-title" target="_blank" rel="noopener">How to add a new software title</a>.</p>
 						</div>
 						<div class="col-md-6"><img src="images/contribute/new-features.jpg" alt="Suggest" width="8" height="5" loading="lazy"></div>
 					</div>
@@ -252,6 +253,10 @@
 							<p>
 								Sometimes the easiest way to help, it is to share experience. It helps a lot to write about DietPi project, tell others about it.
 								<br>We embed relevant blog posts and YouTube links in the documentation. There is also a dedicated <a href="https://dietpi.com/docs/references/">Reference page</a>
+							</p>
+							<p>
+								Of course, you are invited to write blog posts in our <a href="https://dietpi.com/blog/" target="_blank" rel="noopener">DietPi Blog</a>.
+								<br>As an option, you might only generate the text and graphics, supply photos and our DietPi team does the editorial work in the Blog post.
 							</p>
 							<p>Help spread the word about DietPi project!</p>
 						</div>
