Header rearrangement with docs, forum and blog

--- a/stats.html
+++ b/stats.html
@@ -50,10 +50,11 @@
 					<a class="nav-link" href="/">HOME</a>
 					<a class="nav-link" href="/#features">FEATURES</a>
 					<a class="nav-link" href="/#download">DOWNLOAD</a>
+					<a class="nav-link" href="https://dietpi.com/docs/">DOCUMENTATION</a>
+					<a class="nav-link" href="https://dietpi.com/forum/">FORUM</a>
+					<a class="nav-link" href="https://dietpi.com/blog/">BLOG</a>
 					<a class="nav-link" href="/#gettingstarted">GETTING STARTED</a>
-					<a class="nav-link" href="#stats">STATS</a>
 					<a class="nav-link" href="contribute.html">DONATE</a>
-					<a class="nav-link" href="/#testimonials">TESTIMONIALS</a>
 				</div>
 			</div>
 		</nav>
