--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -50,7 +50,7 @@
 					<a class="nav-link" href="/">HOME</a>
 					<a class="nav-link" href="/#features">FEATURES</a>
 					<a class="nav-link" href="/#download">DOWNLOAD</a>
-					<a class="nav-link" href="https://dietpi.com/docs/">DOCUMENTATION</a>
+					<a class="nav-link" href="https://dietpi.com/docs/">DOCS</a>
 					<a class="nav-link" href="https://dietpi.com/forum/">FORUM</a>
 					<a class="nav-link" href="https://dietpi.com/blog/">BLOG</a>
 					<a class="nav-link" href="/#gettingstarted">GETTING STARTED</a>
