--- a/stats.html
+++ b/stats.html
@@ -53,7 +53,7 @@
 					<a class="nav-link" href="https://dietpi.com/docs/">DOCS</a>
 					<a class="nav-link" href="https://dietpi.com/forum/">FORUM</a>
 					<a class="nav-link" href="https://dietpi.com/blog/">BLOG</a>
-					<a class="nav-link" href="/#gettingstarted">GETTING STARTED</a>
+					<a class="nav-link" href="https://github.com/MichaIng/DietPi" target="_blank" rel="noopener">GITHUB</a>
 					<a class="nav-link" href="contribute.html">DONATE</a>
 				</div>
 			</div>
